# cpp-bash

./: .gitignore  CMakeLists.txt  README.md  build.sh  dependencies.sh  run.sh  test.sh
.assertions/: get_target_info.sh
.assertions/dependency_manager/: add.sh  install.sh  remove.sh
.assertions/dependency_manager/modules/apt-package/: add_help.txt  description.txt  install.sh  remove.sh  remove_help.txt
.assertions/dependency_manager/modules/git/: add_help.txt  description.txt  install.sh  remove.sh  remove_help.txt
.assertions/dependency_manager/modules/systemlib/: add_help.txt  description.txt  install.sh  remove.sh  remove_help.txt
src/objs/bash/: shell.cpp  shell.h
src/objs/unix_socket/: client.cpp  client.h  server.cpp  server.h
tests/: shell.cpp
